# ReframeBot

./: .env.example  .gitignore  MODEL_CARD.md  README.md  app.py  docker-compose.yml  evaluation_report.json  pyproject.toml  pyrightconfig.json
data/: dataset_audit_report.json  evaluation_test_data.json
docker/: api.Dockerfile  nginx.conf
docs/: SETUP.md
rag_db/: chroma.sqlite3
scripts/: audit_datasets.py  benchmark.py  benchmark_inprocess.py  build_rag_db.py  dedupe_datasets.py  evaluate_model.py  export_merged_model.py  push_all_models.py  push_model_cards.py  quantize_awq.py  train_guardrail.py
src/reframebot/: config.py  constants.py  main.py  router.py
src/reframebot/services/: guardrail.py  llm.py  rag.py
tests/: conftest.py  test_guardrail.py  test_router.py
tests/unit/: test_constants.py  test_guardrail.py  test_router.py
web/: script.js
